<resources>
    <string name="app_name">Sizer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create account</string>
    <string name="save">Save</string>
    <string name="welcome">WELCOME</string>
    <string name="sizer_app">SIZER APP</string>
    <string name="getting_started">GETTING STARTED</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="done">Done</string>
    <string name="app_version">1.0</string>
    <string name="height">Height</string>

    <string name="error_empty_field">Field can not be empty</string>
    <string name="error_weak_password">Password is too weak</string>
    <string name="loading">Loading…</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="thank_you">THANK YOU!</string>
    <string name="debug">Debug</string>
    <string name="uploading_images">Uploading images...</string>

</resources>
