<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sizer.ui.activity.OpeningActivity"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
        android:text="@string/welcome"
        android:layout_centerInParent="true"/>


    <Button
        android:id="@+id/btn_debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug"
        android:layout_marginBottom="50dp"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:text="@string/getting_started"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
